
You should have received a copy of the GNU General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.

CHANGELOG
=========
v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
	
	Changes With Important Notices
		...
	
	Significant Changes
		Individual Needs: new interface for parents to view individual education plans for their children (off by default)
	
	Security
		System: converted links to GNU GPL to HTTPS
	
	Tweaks & Bug Fixes
		System: Added Danish as a development language
		System: improved MIME type checking on CSV import
		System: fixed Google login PHP warnings
		System: fixed login PHP warning
		System: added Pakistani Rupee (₨) and Jamaican Dollar as currenciess
		System Admin: Improved version comparison in module updater
		System Admin: Improved version comparison in non-login database updater
		Activities: fixed error in adding and editing activities when payment is turned off
		Attendance: added client side warning in case attendance is taken for a day in the past (happens when user not logged out over night)
		Behaviour: made column widths consistent when viewing behaviour log
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue
		Library: added item count column to lending log
		Library: added count of records to Manage Catalog
		Markbook: fixed issue causing mis-evaluation of personalised targets, for some edge cases
		Markbook: fixed uploaded response file selector gigantism issue
		Planner: fixed surplus slash issue in Crowd Assessment settings in Lesson Planner add page
		School Admin: fixed bug preventing non-contiguous primary external assessment settings from being saved in Formal Assessment settings
		Students: added year group to New Students report when using Date Range setting 