@@ -25,8 +25,9 @@ v12.0.00
 		...
 	
 	Significant Changes
+		System: replaced float with version_compare, fixing cases where minor (system and module) updates could not be installed.
 		Individual Needs: new interface for parents to view individual education plans for their children (off by default)
-	
+		
 	Security
 		System: converted links to GNU GPL to HTTPS
 	
